--- a/www/.gitignore
+++ b/www/.gitignore
@@ -1,19 +1,6 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+.DS_Store
+config.json
+testnet.json
 
-# compiled output
-/dist
-/tmp
-
-# dependencies
-/node_modules
-/bower_components
-/chart/node_modules
-
-# misc
-/.sass-cache
-/connect.lock
-/coverage/*
-/libpeerconnection.log
-npm-debug.log
-testem.log
-/config/environment.js
+/build/_workspace/
+/build/bin/
