--- a/www/.travis.yml
+++ b/www/.travis.yml
@@ -1,23 +1,8 @@
----
-language: node_js
-node_js:
-  - "0.12"
+language: go
 
-sudo: false
+go:
+  - 1.9
+  - tip
 
-cache:
-  directories:
-    - node_modules
-
-before_install:
-  - export PATH=/usr/local/phantomjs-2.0.0/bin:$PATH
-  - "npm config set spin false"
-  - "npm install -g npm@^2"
-
-install:
-  - npm install -g bower
-  - npm install
-  - bower install
-
-script:
-  - npm test
+services:
+  - redis-server
